2012-02-23  Karl Berry  <karl@gnu.org>

	* doc/texinfo.txi (Output Formats): expand the text on writing
	new back-ends vs. a new programs; idea and basis from Patrice.

2012-02-22  Karl Berry  <karl@gnu.org>

	* doc/texinfo.txi (#line Syntax Details): update for new regexp,
	requiring the "filename" be present with trailing flags.
	Not 100% sure about cpp's behavior here, but that's what
	we've observed so far.

2012-02-21  Karl Berry  <karl@gnu.org>

	* doc/texinfo.txi: more on alternate implementations.

2012-02-20  Karl Berry  <karl@gnu.org>

	* doc/texinfo.txi (texi2html): new node, describing past,
	present, future of texi2html.

	* doc/texinfo.txi (Obtaining TeX): update a bit, keep
	www.gnu.org/prep/FTP in sync.

	* NEWS, doc/texinfo.txi (Generic Translator texi2any): clarify
	that there are no differences based on the program name (makeinfo
	vs. texi2any).  Also, call it "the" translator instead of just "a"
	and explain why.

2012-02-17  Patrice Dumas  <pertusus@free.fr>

	* doc/texinfo.txi (Configuration Variables): update DEBUG and SHORTEXTN
	to be in line with current meanings.  Document the 
	move_index_entries_after_items transformation.

2012-02-16  Karl Berry  <karl@gnu.org>

	* doc/texinfo.txi (#line Directive): mention CPP_LINE_DIRECTIVES,
	and #line not recognized in verbatim.
	(#line Syntax Details): update regexp, discuss surprising
	false positives.
	(Contents): must come before any sectioning command.
	(#line and TeX): reorganize as a list.

2012-02-10  Patrice Dumas  <pertusus@free.fr>

	* autogen.sh, tp/.cvsignore, tp/Makefile.am, 
	maintain/regenerate_document_strings_make_rules.sh,
	maintain/regenerate_file_lists.pl: replace unconditional copy by
	generated make rules.

2012-02-07  Patrice Dumas  <pertusus@free.fr>

	* doc/texinfo.txi, tp/Texinfo/Common.pm, tp/texi2any.pl,
	tp/Texinfo/Convert/PlainTexinfo.pm, tp/Makefile.am: new converter,
	converting the tree to Texinfo.  Add a FIX_TEXINFO customization